Fix spacing for request header toggle
Fixed: 1324851
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3652199
Auto-Submit: Yang Guo <yangguo@chromium.org>
Commit-Queue: Yang Guo <yangguo@chromium.org>

--- a/front_end/panels/network/requestHeadersTree.css
+++ b/front_end/panels/network/requestHeadersTree.css
@@ -59,6 +59,12 @@
   display: none;
 }
 
+.tree-outline li .headers-title-left {
+  min-width: 50%;
+  display: flex;
+  justify-content: space-between;
+}
+
 .tree-outline li .header-toggle {
   display: none;
 }
